MFH: r284250

Consistently use trailing whitespace in passphrase prompts.

PR:        193496
Submitted by:    Fabian Keil

Former-commit-id: d055545d6420e1390f98a3f1d150c751ae149a76